# worldcup-forecast

./: .gitignore  CONTRIBUTING.md  Makefile  README-EN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/snapshots/: fifa_ranking_2026-06-11.csv  squad_values_2026.csv
docs/: DESIGN.md  FINDINGS.md
src/wcforecast/: __init__.py  cli.py  data.py  markets.py  model.py  predict.py  ratings.py  simulate.py  teams.py  validate.py
tests/: test_metrics.py  test_predict.py  test_teams.py
