[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-forecast"
version = "0.1.0"
description = "A rigorously-validated structural + Bayesian forecaster for the FIFA World Cup"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "frank" }]
keywords = ["football", "soccer", "world-cup", "forecasting", "bayesian", "poisson", "elo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "requests>=2.28",
    "pymc>=5",
    "arviz>=0.16",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
gbm = ["lightgbm>=4"]   # only to reproduce the (rejected) gradient-boosting experiment

[project.scripts]
wcforecast = "wcforecast.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/worldcup-forecast"
Issues = "https://github.com/your-org/worldcup-forecast/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
